--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-document-picker": "~11.5.4",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-indicators": "^0.17.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "expo-document-picker": "~11.5.4",
-    "react-native-webview": "13.2.2",
-    "expo-av": "~13.4.1"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
